# Ashurov_A_T

./: CMakeLists.txt  FinDir.pro  Sudostroitelnaya_Verf.bak  addnew.cpp  addnew.h  addnew.ui  addrecord.h  auth.cpp  auth.h  auth.ui  choice.cpp  choice.h  choice.ui  converter.cpp  converter.h  converter.ui  edit.cpp  edit.h  edit.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ships.cpp  ships.h  ships.ui  stonks.cpp  stonks.h  stonks.ui
